fix: Potential fix for scrolling on iPhone

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -301,6 +301,14 @@ img {
   pointer-events: none;
   user-select: none;	
 }
+
+.lock-screen {
+  height: 100%;
+  overflow: hidden;
+  width: 100%;
+  position: fixed;
+}
+
 /* .modal{
   width:100%;
   height:100%;
